--- a/projects.html
+++ b/projects.html
@@ -60,9 +60,10 @@
             <div class="insight">
                 <p>Developed a headless CMS architecture for Mortlock Timbers by converting their WordPress website into
                     a modern solution using GatsbyJS. Leveraged WordPress as a content backend while GatsbyJS handled
-                    the frontend along with React, ensuring faster load times and improved SEO. Implemented GraphQL for efficient data
+                    the frontend along with React, ensuring faster load times and improved SEO. Implemented GraphQL for
+                    efficient data
                     querying, enhancing performance and scalability. The transformation provided a seamless user
-                    experience and streamlined content management for the business. 
+                    experience and streamlined content management for the business.
                 </p>
             </div>
             <div class="tech-stack">
@@ -104,7 +105,8 @@
                 <iframe width="auto" height="315" src="https://dhavalv3rma.github.io/tictactoe/"
                         title="Tictactoe" frameborder="0" allowfullscreen></iframe><br>
                 <a target="_blank" href="https://dhavalv3rma.github.io/tictactoe/">Project Link</a>
-                <p>Built a fun responsive game for all devices using JavaScript/jQuery</p>
+                <p>Built a fun time responsive game to challenge my logical abilities without the help of google or
+                    stackoverflow :) using JavaScript/jQuery</p>
             </div>
             <div class="tech-stack">
                 <span>-----Tech Stack-----</span>
@@ -115,98 +117,108 @@
                     <img title="jQuery" src="images/jq.png" class="icons" alt="jQuery">
                     <img title="Bootstrap" src="images/bstrap.png" class="icons" alt="Bootstrap">
                 </div>
-
             </div>
         </div>
-        <div class="container">
-            <h2>Permishare.com</h2>
-            <a target="_blank" href="https://www.permishare.com/">Project Link</a>
 
-            <div class="insight">
 
-                <p>Designed and developed a WordPress website in accordance with client requirements, incorporating
-                    integrations with external services and creating custom graphic elements.</p>
-                <ul>
-                    <li>Designed and developed responsive wordpress website from layout to deployment, aligning with
-                        client specifications to ensure a seamless user experience.</li>
-                    <li>Optimized website for optimal performance resulting in faster load time, FCP and Time to
-                        interactivity.</li>
-                    <li>Implemented SMTP integration to send emails using Sendgrid.</li>
-                    <li>Created Company's logo, icons and images in different sizes and variants using Adobe
-                        illustrator.</li>
-                </ul>
-            </div>
-            <div class="tech-stack">
-                <span>-----Tech Stack-----</span>
-                <div class=" flex-container icons">
-                    <img title="Html" src="images/html.png" class="tooltip icons" alt="Html">
-                    <img title="Css" src="images/css.png" class="icons" alt="Css">
-                    <img title="Javascript" src="images/js.png" class="icons" alt="Javascript">
-                    <img title="jQuery" src="images/jq.png" class="icons" alt="jQuery">
-                    <img title="Wordpress" src="images/WordPress_blue_logo.svg" class="icons" alt="Wordpress">
+        <h2>----------------------- Old Projects -----------------------</h2>
+        <button class="showBtn" >Toggle Projects Visibility</button>
+        <div class="hide old_projects">
+            <div class="container">
+                <h2>Permishare.com</h2>
+                <a target="_blank" href="https://www.permishare.com/">Project Link</a>
+
+                <div class="insight">
+
+                    <p>Designed and developed a WordPress website in accordance with client requirements, incorporating
+                        integrations with external services and creating custom graphic elements.</p>
+                    <ul>
+                        <li>Designed and developed responsive wordpress website from layout to deployment, aligning with
+                            client specifications to ensure a seamless user experience.</li>
+                        <li>Optimized website for optimal performance resulting in faster load time, FCP and Time to
+                            interactivity.</li>
+                        <li>Implemented SMTP integration to send emails using Sendgrid.</li>
+                        <li>Created Company's logo, icons and images in different sizes and variants using Adobe
+                            illustrator.</li>
+                    </ul>
                 </div>
+                <div class="tech-stack">
+                    <span>-----Tech Stack-----</span>
+                    <div class=" flex-container icons">
+                        <img title="Html" src="images/html.png" class="tooltip icons" alt="Html">
+                        <img title="Css" src="images/css.png" class="icons" alt="Css">
+                        <img title="Javascript" src="images/js.png" class="icons" alt="Javascript">
+                        <img title="jQuery" src="images/jq.png" class="icons" alt="jQuery">
+                        <img title="Wordpress" src="images/WordPress_blue_logo.svg" class="icons" alt="Wordpress">
+                    </div>
 
-            </div>
-        </div>
-        <div class="container">
-            <h2>BoltzTrade</h2>
-            <h4>2017-2018</h4>
-            <a target="_blank" href="https://dhavalv3rma.github.io/frontlab/">Project Link</a>
-            <div class="insight">
-
-                <p>Worked as a lead Front end developer at Bangalore based startup company "Boltztrade".
-                    Created the website with a firebase architecture as a backend for collecting user data and mail
-                    generated notifications.</p>
-                <ul>
-                    <li>Worked as a Frontend developer/designer for client’s marketing website.</li>
-                    <li>Implemented Firebase integration for getting user registration data into database and perform
-                        email operations on it afterwards.</li>
-                    <li>Coded Responsive design for various media.</li>
-                    <li>Created company logo using Adobe illustrator.</li>
-                    <li>Worked on Search Engine Optimization.</li>
-                </ul>
-
-            </div>
-            <div class="tech-stack">
-                <span>-----Tech Stack-----</span>
-                <div class=" flex-container icons">
-                    <img title="Html" src="images/html.png" class="tooltip icons" alt="Html">
-                    <img title="Css" src="images/css.png" class="icons" alt="Css">
-                    <img title="Javascript" src="images/js.png" class="icons" alt="Javascript">
-                    <img title="jQuery" src="images/jq.png" class="icons" alt="jQuery">
-                    <img title="Bootstrap" src="images/bstrap.png" class="icons" alt="Bootstrap">
-                    <img title="Firebase" src="images/firebase.png" class="icons" alt="Firebase">
                 </div>
+            </div>
+            <div class="container">
+                <h2>BoltzTrade</h2>
+                <h4>2017-2018</h4>
+                <a target="_blank" href="https://dhavalv3rma.github.io/frontlab/">Project Link</a>
+                <div class="insight">
 
-            </div>
-        </div>
-        <div class="container">
-            <h2>Ask-ME Bot</h2>
-            <h4>2017</h4>
-            <div class="insight">
-                <iframe width="auto" height="315" src="https://www.youtube.com/embed/0xCVRHO5GE8?si=9kL_ZS3KixvcpVv4"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                <p>Built a text/voice Chat-bot, admin panel(website) and application(Android) for Lovely Professional
-                    University to give user's required information directly from University Management System
-                    (UMS).<br><br>
-                    In a team of 4, I Worked as a UI developer for the development of responsive admin panel for various
-                    media screen sizes, built on React 15 using bootstrap. Also worked on logo and image designing for
-                    the whole product, website and
-                    android application.
-                </p>
-            </div>
-            <div class="tech-stack">
-                <span>-----Tech Stack-----</span>
-                <div class=" flex-container icons">
-                    <img title="Html" src="images/html.png" class="tooltip icons" alt="Html">
-                    <img title="Css" src="images/css.png" class="icons" alt="Css">
-                    <img title="Javascript" src="images/js.png" class="icons" alt="Javascript">
-                    <img title="Bootstrap" src="images/bstrap.png" class="icons" alt="Bootstrap">
-                    <img title="Angular" src="images/angular.png" class="icons" alt="Angular">
+                    <p>Worked as a lead Front end developer at Bangalore based startup company "Boltztrade".
+                        Created the website with a firebase architecture as a backend for collecting user data and mail
+                        generated notifications.</p>
+                    <ul>
+                        <li>Worked as a Frontend developer/designer for client’s marketing website.</li>
+                        <li>Implemented Firebase integration for getting user registration data into database and
+                            perform
+                            email operations on it afterwards.</li>
+                        <li>Coded Responsive design for various media.</li>
+                        <li>Created company logo using Adobe illustrator.</li>
+                        <li>Worked on Search Engine Optimization.</li>
+                    </ul>
+
                 </div>
+                <div class="tech-stack">
+                    <span>-----Tech Stack-----</span>
+                    <div class=" flex-container icons">
+                        <img title="Html" src="images/html.png" class="tooltip icons" alt="Html">
+                        <img title="Css" src="images/css.png" class="icons" alt="Css">
+                        <img title="Javascript" src="images/js.png" class="icons" alt="Javascript">
+                        <img title="jQuery" src="images/jq.png" class="icons" alt="jQuery">
+                        <img title="Bootstrap" src="images/bstrap.png" class="icons" alt="Bootstrap">
+                        <img title="Firebase" src="images/firebase.png" class="icons" alt="Firebase">
+                    </div>
 
+                </div>
+            </div>
+            <div class="container">
+                <h2>Ask-ME Bot</h2>
+                <h4>2017</h4>
+                <div class="insight">
+                    <iframe width="auto" height="315"
+                            src="https://www.youtube.com/embed/0xCVRHO5GE8?si=9kL_ZS3KixvcpVv4"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <p>Built a text/voice Chat-bot, admin panel(website) and application(Android) for Lovely
+                        Professional
+                        University to give user's required information directly from University Management System
+                        (UMS).<br><br>
+                        In a team of 4, I Worked as a UI developer for the development of responsive admin panel for
+                        various
+                        media screen sizes, built on React 15 using bootstrap. Also worked on logo and image designing
+                        for
+                        the whole product, website and
+                        android application.
+                    </p>
+                </div>
+                <div class="tech-stack">
+                    <span>-----Tech Stack-----</span>
+                    <div class=" flex-container icons">
+                        <img title="Html" src="images/html.png" class="tooltip icons" alt="Html">
+                        <img title="Css" src="images/css.png" class="icons" alt="Css">
+                        <img title="Javascript" src="images/js.png" class="icons" alt="Javascript">
+                        <img title="Bootstrap" src="images/bstrap.png" class="icons" alt="Bootstrap">
+                        <img title="Angular" src="images/angular.png" class="icons" alt="Angular">
+                    </div>
+
+                </div>
             </div>
         </div>
     </section>
@@ -236,17 +248,15 @@
 
     <script>
         AOS.init();
-        $(".dropdown").on('click', function () {
-            $(".dropdown-content").toggleClass("show hide");
+         
+        $(".showBtn").on('click', function () {
+            $(".old_projects").toggleClass("show hide");
         });
 
-        $("section").on("click", function () {
-            $(".dropdown-content").removeClass("show");
+        $("showBtn").on("click", function () {
+            $(".old_projects").removeClass("show");
         });
 
-        $(".dropdown-content").on("mouseleave", function () {
-            $(".dropdown-content").removeClass("show");
-        });
 
         var dates = new Date()
         var x = dates.getFullYear();
