--- a/projects.html
+++ b/projects.html
@@ -122,7 +122,7 @@
 
 
         <h2>----------------------- Old Projects -----------------------</h2>
-        <button class="showBtn" >Toggle Projects Visibility</button>
+        <button class="showBtn" >Show/Hide</button>
         <div class="hide old_projects">
             <div class="container">
                 <h2>Permishare.com</h2>
