--- a/projects.html
+++ b/projects.html
@@ -30,10 +30,11 @@
             <h2>Material Quote to Cash</h2>
 
             <div class="insight">
-                <p>As a Senior Frontend Developer at TCS, led a team of five developers to migrate legacy Silverlight
+                <p>As a Senior Frontend Developer at TCS, led a team of five developers to migrate 3 legacy Silverlight
                     applications to Angular 14. Reengineered the SOAP architecture into RESTful APIs, enhancing
-                    performance and scalability and improving system efficiency by 60%. The project was a Quote-to-Cash
-                    application with a user base of over 35,000, spanning all four time zones across the United States.
+                    performance and scalability and improving system efficiency by 60%. All projects were focused on
+                    CustomerPortal ad Quote-to-Cash-based applications, serving a user base of over 35,000 across all four time zones in
+                    the United States.
                     <br>
                     Client: <b><u>CRH Americas Materials</u></b>.
                 </p>
@@ -79,6 +80,21 @@
             </div>
         </div>
         <div class="container">
+            <h2>Weather App - VueJS</h2>
+            <div class="insight">
+                <a target="_blank" href="https://github.com/dhavalv3rma/vue-weather-app">Project Link</a>
+                <p>Built a responsive Vue.js weather app showing user weather and other parameters on search, fun
+                    weekend project testing Vue js the first time</p>
+            </div>
+            <div class="tech-stack">
+                <span>-----Tech Stack-----</span>
+                <div class=" flex-container icons">
+                    <img title="VueJS" src="images/vue-js.png" class="tooltip icons" alt="Vue">
+                    <img title="Javascript" src="images/js.png" class="icons" alt="Javascript">
+                </div>
+            </div>
+        </div>
+        <div class="container">
             <h2>Dilate Map</h2>
             <a target="_blank" href="https://github.com/dhavalv3rma/dilate-map">Project Link</a>
 
@@ -104,8 +120,8 @@
             <div class="insight">
                 <iframe width="auto" height="315" src="https://dhavalv3rma.github.io/tictactoe/"
                         title="Tictactoe" frameborder="0" allowfullscreen></iframe><br>
-                <a target="_blank" href="https://dhavalv3rma.github.io/tictactoe/">Project Link</a>
-                <p>Built a fun time responsive game to challenge my logical abilities without the help of google or
+                <a target="_blank" href="https://github.com/dhavalv3rma/tictactoe">Project Link</a>
+                <p>Built a responsive game to challenge my logical abilities without the help of google or
                     stackoverflow :) using JavaScript/jQuery</p>
             </div>
             <div class="tech-stack">
@@ -122,7 +138,7 @@
 
 
         <h2>----------------------- Old Projects -----------------------</h2>
-        <button class="showBtn" >Show/Hide</button>
+        <button class="showBtn">Show/Hide</button>
         <div class="hide old_projects">
             <div class="container">
                 <h2>Permishare.com</h2>
@@ -248,7 +264,7 @@
 
     <script>
         AOS.init();
-         
+
         $(".showBtn").on('click', function () {
             $(".old_projects").toggleClass("show hide");
         });
