--- a/projects.html
+++ b/projects.html
@@ -27,13 +27,37 @@
     </section>
     <section class="projects">
         <div class="container">
+            <h2>Book Store App</h2>
+            <a target="_blank" href="https://github.com/dhavalv3rma/Bookstore---MERN">Project Link</a>
+
+            <div class="insight">
+                <p>Book Store project, based on <b><u>MERN</u></b> stack. The application enables users to perform all
+                    fundamental CRUD operations on a books list. State management is implemented using React Hooks. Data
+                    is persisted to a MongoDB database and synchronized with the React frontend through an ExpressJS
+                    middleware layer. CORS is implemented to ensure cross-origin resource sharing and mitigate potential
+                    browser-based security restrictions.
+                </p>
+            </div>
+            <div class="tech-stack">
+                <span>-----Tech Stack-----</span>
+                <div class=" flex-container icons">
+                    <img title="ReactJS" src="images/react.png" class="icons" alt="React">
+                    <img title="NodeJS" src="images/node.png" class="icons" alt="React">
+                    <img title="ExpressJS" src="images/express-js.png" class="icons" alt="React">
+                    <img title="MongoDB" src="images/mongo.png" class="icons" alt="React">
+                    <img title="Postman" src="images/Postman.svg" class="icons" alt="Postman">
+                </div>
+            </div>
+        </div>
+        <div class="container">
             <h2>Material Quote to Cash</h2>
 
             <div class="insight">
                 <p>As a Senior Frontend Developer at TCS, led a team of five developers to migrate 3 legacy Silverlight
                     applications to Angular 14. Reengineered the SOAP architecture into RESTful APIs, enhancing
                     performance and scalability and improving system efficiency by 60%. All projects were focused on
-                    CustomerPortal ad Quote-to-Cash-based applications, serving a user base of over 35,000 across all four time zones in
+                    CustomerPortal ad Quote-to-Cash-based applications, serving a user base of over 35,000 across all
+                    four time zones in
                     the United States.
                     <br>
                     Client: <b><u>CRH Americas Materials</u></b>.
@@ -42,10 +66,10 @@
             <div class="tech-stack">
                 <span>-----Tech Stack-----</span>
                 <div class=" flex-container icons">
-                    <img title="React" src="images/angular.png" class="icons" alt="Angular">
+                    <img title="Angular" src="images/angular.png" class="icons" alt="Angular">
                     <img title="Javascript" src="images/5968381.png" class="icons" alt="Typescript">
                     <img title="Bootstrap" src="images/bstrap.png" class="icons" alt="Bootstrap">
-                    <img title="Css" src="images/sass.png" class="icons" alt="SCSS">
+                    <img title="SCSS" src="images/sass.png" class="icons" alt="SCSS">
                     <img title="NET" src="images/net.svg" class="icons" alt="NET">
                     <img title="SQL" src="images/microsoft-sql-server-logo.svg" class="icons" alt="SQL">
                     <img title="Azure" src="images/azure.png" class="icons" alt="Azure">
