--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="head-container">
         <div id="nav-bar">
             <a class="link" href="#about">About</a>
-            <a class="link" href="projects.html">Projects</a> 
+            <a class="link" href="projects.html">Projects</a>
             <a class="link" href="#footer">Contact</a>
         </div>
     </header>
@@ -33,7 +33,8 @@
             <img class="user_pic " src="images/dt.png" alt="dhaval_image">
             <h2>Hi</h2>
             <div class="insight">
-                <p>Experienced Frontend Developer with a proven track record and expertise in creating seamless UI experience with Responsive designs, DOM manipulation, speed
+                <p>Experienced Frontend Developer with a proven track record and expertise in creating seamless UI
+                    experience with Responsive designs, DOM manipulation, speed
                     optimizations and efficient debugging and deployment practices. Strong IT professional with
                     extensive experience in building and maintaining robust front-end applications and RESTful services.
                     <br> <br>
@@ -75,6 +76,18 @@
                         <span class="iconText">React</span>
                     </div>
                     <div class="iconBox">
+                        <img title="NodeJS" src="images/node.png" class="icons" alt="NodeJS">
+                        <span class="iconText">NodeJS</span>
+                    </div>
+                    <div class="iconBox">
+                        <img title="ExpressJS" src="images/express-js.png" class="icons" alt="ExpressJS">
+                        <span class="iconText">ExpressJS</span>
+                    </div>
+                    <div class="iconBox">
+                        <img title="MongoDB" src="images/react.png" class="icons" alt="MongoDB">
+                        <span class="iconText">MongoDB</span>
+                    </div>
+                    <div class="iconBox">
                         <img title="jQuery" src="images/jq.png" class="icons" alt="jQuery">
                         <!-- <span class="iconText">jQuery</span> -->
                     </div>
@@ -89,6 +102,18 @@
                     <div class="iconBox">
                         <img title="TailWind" src="images/tWind.png" class="icons" alt="TailWind">
                         <span class="iconText">TailWind</span>
+                    </div>
+                </div>
+
+                <h4>-------- Databases --------</h4>
+                <div class="flex-container">
+                    <div class="iconBox">
+                        <img title="MSQL" src="images/microsoft-sql-server-logo.svg" class="icons" alt="MSQL">
+                        <span class="iconText">MySQL</span>
+                    </div>
+                    <div class="iconBox">
+                        <img title="MongoDB" src="images/mongodb.webp" class="icons" alt="MongoDB">
+                        <span class="iconText">MongoDB</span>
                     </div>
                 </div>
                 <h4>-------- CMS --------</h4>
@@ -106,7 +131,7 @@
                         <!-- <span class="iconText">SquareSpace</span> -->
                     </div>
                 </div>
-                <h4>-------- DIGITAL MARKETING --------</h4>
+                <h4>-------- SEO/Analytics --------</h4>
                 <div class="flex-container">
                     <div class="iconBox">
                         <img title="Analytics" src="images/analytics.png" class="icons" alt="Analytics">
@@ -129,7 +154,11 @@
                     </div>
                     <div class="iconBox">
                         <img title="XD" src="images/xd.png" class="icons" alt="XD">
-                        <span class="iconText">XD</span>
+                        <span class="iconText">Adobe XD</span>
+                    </div>
+                    <div class="iconBox">
+                        <img title="Figma" src="images/figma.png" class="icons" alt="Figma">
+                        <span class="iconText">Figma</span>
                     </div>
                 </div>
 
@@ -143,13 +172,19 @@
                 <div class="flex-container">
                     <div class="iconBox">
                         <img title="Space Nerd 🌠" src="images/space.png" class="icons" alt="Space Nerd">
+                        <span class="iconText">Space Nerd</span>
+
                     </div>
                     <div class="iconBox">
                         <img title="Hiking" src="images/hiking.png" class="icons" alt="Hiking">
+                        <span class="iconText">Hiker</span>
+
                     </div>
                     <div class="iconBox">
                         <img title="Hardcore Gamer 😎" src="images/game-controller.png" class="tooltip icons"
                              alt="Hardcore Gamer😎">
+                        <span class="iconText">Gamer</span>
+
                     </div>
                 </div>
             </div>
