--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         <span class="iconText">MongoDB</span>
                     </div>
                 </div>
-                <h4>-------- CMS --------</h4>
+                <!-- <h4>-------- CMS --------</h4>
                 <div class="flex-container">
                     <div class="iconBox">
                         <img title="Wordpress" src="images/WordPress_blue_logo.svg" class="icons" alt="Wordpress">
@@ -128,21 +128,21 @@
                     </div>
                     <div class="iconBox">
                         <img title="SquareSpace" src="images/squarespace.png" class="icons" alt="SquareSpace">
-                        <!-- <span class="iconText">SquareSpace</span> -->
+                        <span class="iconText">SquareSpace</span> 
                     </div>
                 </div>
                 <h4>-------- SEO/Analytics --------</h4>
                 <div class="flex-container">
                     <div class="iconBox">
                         <img title="Analytics" src="images/analytics.png" class="icons" alt="Analytics">
-                        <!-- <span class="iconText">Analytics</span> -->
+                        <span class="iconText">Analytics</span> 
                     </div>
                     <div class="iconBox">
                         <img title="TagManager" src="images/gtm.png" class="icons" alt="Tagmanager">
-                        <!-- <span class="iconText">Tagmanager</span> -->
+                         <span class="iconText">Tagmanager</span> 
                     </div>
                 </div>
-                <h4>-------- OTHER SKILLS --------</h4>
+                <h4>-------- OTHER SKILLS --------</h4> -->
                 <div class="flex-container">
                     <div class="iconBox">
                         <img title="Firebase" src="images/firebase.png" class="icons" alt="Firebase">
