--- a/projects.html
+++ b/projects.html
@@ -31,11 +31,14 @@
             <a target="_blank" href="https://github.com/dhavalv3rma/Bookstore---MERN">Project Link</a>
 
             <div class="insight">
-                <p>Book Store project, based on <b><u>MERN</u></b> stack. The application enables users to perform all
-                    fundamental CRUD operations on a books list. State management is implemented using React Hooks. Data
-                    is persisted to a MongoDB database and synchronized with the React frontend through an ExpressJS
-                    middleware layer. CORS is implemented to ensure cross-origin resource sharing and mitigate potential
-                    browser-based security restrictions.
+                <p>he Book Store application is a MERN stack-based project that enables users to perform comprehensive
+                    CRUD operations on a list of books. The frontend is built with React, utilizing React Hooks for
+                    efficient state management, and Axios for seamless API integration. The backend, developed with
+                    ExpressJS, provides robust RESTful API endpoints, while MongoDB serves as the database for
+                    persisting book data. Cross-Origin Resource Sharing (CORS) is implemented to ensure secure and
+                    reliable communication between the frontend and backend. This application delivers a fully
+                    synchronized, user-friendly interface for managing books, offering features to create, read, update,
+                    and delete records efficiently.
                 </p>
             </div>
             <div class="tech-stack">
