--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
             <a target="_blank" href="https://github.com/dhavalv3rma/Bookstore---MERN">Project Link</a>
 
             <div class="insight">
-                <p>he Book Store application is a MERN stack-based project that enables users to perform comprehensive
+                <p>The Book Store application is a MERN stack-based project that enables users to perform comprehensive
                     CRUD operations on a list of books. The frontend is built with React, utilizing React Hooks for
                     efficient state management, and Axios for seamless API integration. The backend, developed with
                     ExpressJS, provides robust RESTful API endpoints, while MongoDB serves as the database for
