--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
                         <img title="TagManager" src="images/gtm.png" class="icons" alt="Tagmanager">
                          <span class="iconText">Tagmanager</span> 
                     </div>
-                </div>
-                <h4>-------- OTHER SKILLS --------</h4> -->
+                </div> -->
+                <h4>-------- OTHER SKILLS --------</h4>
                 <div class="flex-container">
                     <div class="iconBox">
                         <img title="Firebase" src="images/firebase.png" class="icons" alt="Firebase">
